feat(espacios-service): add retrofit y rabbitmq conf